LU-1592 ldlm: server disconnect and handle connect race

target_handle_connect() could find to be disconnect export and race
destroying its exp_imp_reverse member.

Signed-off-by: Bobi Jam <bobijam@whamcloud.com>
Change-Id: I8346dcbc896068316d5bdb3410bbc124f10e418f